InsuranceLicensePackage/src/objects/Checklist__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>download_spreadsheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download Spreadsheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filled_spreadsheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>filled spreadsheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>send_spreadsheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>send spreadsheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>set_approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>set approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>watch_compliance_video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>watch compliance video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>watch_configuration_video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>watch configuration video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>watch_video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>watch video</label>
        <type>Checkbox</type>
    </fields>
    <label>Checklist</label>
</CustomObject>